Fix collapsed color

--- a/backend/garpixcms/static/admin/css/forms.css
+++ b/backend/garpixcms/static/admin/css/forms.css
@@ -241,7 +241,7 @@ fieldset.collapsed h2 {
 }
 
 fieldset .collapse-toggle {
-  color: #fff;
+  color: #447e9b;
 }
 
 fieldset.collapsed .collapse-toggle {
